--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
 </head>
 <body>
 	
+<div>
+	<input id="create" type="submit" value="Create a Quote">
+
+</div>
+
+
+<form id="quoteForm">
+	<input id="quoteInput" type="text" placeholder="Quote">
+	<input id="albumInput" type="text" placeholder="Album">
+	<input id="songInput" type="text" placeholder="Song">
+		<div>
+			<input id="submit" type="submit" value="Submit Quote">
+		</div>
+</form>
+
+
+
+
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <script src="main.js"></script>
 
