--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 <head>
   <meta charset="utf-8">
   <title>Untitled</title>
+
+
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 	
-<div>
+<div id="create-div">
 	<input id="create" type="submit" value="Create a Quote">
+
 
 </div>
 
+<div id="formBox">
 
 <form id="quoteForm">
 	<input id="quoteInput" type="text" placeholder="Quote">
@@ -20,7 +24,15 @@
 		<div>
 			<input id="submit" type="submit" value="Submit Quote">
 		</div>
+
+		<div>
+			<input id="finished" type="submit" value="Finished">
+		</div>
 </form>
+
+</div>
+
+<div id="display"></div>
 
 
 
